somewhat good progress in chapter 6

--- a/content/appendix-A-snimky.tex
+++ b/content/appendix-A-snimky.tex
@@ -1,3 +1,17 @@
 %!TEX ROOT=../diploma-thesis.tex
 
-\chapter{TODO Screenshots}
+\chapter{Snímky ukázkové aplikace a centrální administrace}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.9\linewidth]{figures/business-context-detail.png}
+    \caption{Detail byznysového kontextu v centrální administraci}
+    \label{fig:screenshot-context-detail}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.9\linewidth]{figures/business-context-edit.png}
+    \caption{Formulář pro vytvoření nebo úpravu byznysového kontextu v centrální administraci}
+    \label{fig:screenshot-context-edit}
+\end{figure}
