--- a/content/chapter-01-uvod.tex
+++ b/content/chapter-01-uvod.tex
@@ -33,3 +33,7 @@ popisuje, jakým způsobem byly tyto knihovny otestovány a jak byla prokázána
 je zde popsána validace a vyhodnocení konceptu frameworku jeho nasazením při vývoji
 jednoduchého ukázkového e-commerce systému. V poslední kapitole~\ref{ch:zaver} je shrnuto, jakých
 cílů bylo v práci dosáhnuto a jakým dalším směrem se může výzkum v této oblasti ubírat.
+
+\goal{Zkratky}
+Zkratky používané v textu jsou vždy nejdříve zavedeny a vysvětleny. Pro přehlednost byl ale zároveň
+souhrn používaných zkratek přidán jako příloha práce~\ref{ch:shortcuts}.
