--- a/content/chapter-03-reserse.tex
+++ b/content/chapter-03-reserse.tex
@@ -127,6 +127,7 @@ jeví jako vhodný přístup, který nám pomůže dosáhnout cíle.
 \begin{itemize}
     \item co to je
     \item jak to funguje
+    \item RETE algoritmus
     \item výhody
     \item nevýhody
     \item shrnutí a proč se nám nehodí
