--- a/diploma-thesis.tex
+++ b/diploma-thesis.tex
@@ -44,6 +44,7 @@ unicode=true,
 \usepackage{scrextend}
 \usepackage{blindtext}
 \usepackage{multirow}
+\usepackage{makecell}
 
 % custom macros
 \usepackage{custom}
