--- a/reference.bib
+++ b/reference.bib
@@ -414,11 +414,114 @@
 }
 
 @incollection{dragoni2017microservices,
-    title={Microservices: yesterday, today, and tomorrow},
-    author={Dragoni, Nicola and Giallorenzo, Saverio and Lafuente, Alberto Lluch and Mazzara, Manuel and Montesi, Fabrizio and Mustafin, Ruslan and Safina, Larisa},
-    booktitle={Present and Ulterior Software Engineering},
-    pages={195--216},
-    year={2017},
-    publisher={Springer},
+    title = {Microservices: yesterday, today, and tomorrow},
+    author = {Dragoni, Nicola and Giallorenzo, Saverio and Lafuente, Alberto Lluch and Mazzara, Manuel and Montesi, Fabrizio and Mustafin, Ruslan and Safina, Larisa},
+    booktitle = {Present and Ulterior Software Engineering},
+    pages = {195--216},
+    year = {2017},
+    publisher = {Springer},
     address = {Cham, Switzerland},
+}
+
+@techreport{berners1995hypertext,
+    title = {Hypertext markup language-2.0},
+    author = {Berners-Lee, Tim and Connolly, Dan},
+    year = {1995}
+}
+
+@article{bos1998cascading,
+    title = {Cascading style sheets, level 2 CSS2 specification},
+    author = {Bos, Bert and Lie, H { \aa } kon Wium and Lilley, Chris and Jacobs, Ian},
+    journal = {Available via the World Wide Web at http://www. w3. org/TR/1998/REC-CSS2-19980512},
+    pages = {1472--1473},
+    year = {1998},
+}
+
+@article{ben2005yaml,
+    title = {Yaml ain't markup language (yaml™) version 1.1},
+    author = {Ben-Kiki, Oren and Evans, Clark and Ingerson, Brian},
+    journal = {yaml. org, Tech. Rep},
+    pages = {23},
+    year = {2005}
+}
+
+@online{junit4,
+    key = {JUnit - About},
+    title = {JUnit - About},
+    url = {https://junit.org/junit4/},
+    urldate = {2018-04-14},
+}
+
+@online{springboot,
+    key = {Spring Boot},
+    title = {Spring Boot},
+    url = {https://projects.spring.io/spring-boot/},
+    urldate = {2018-04-14},
+}
+
+@online{flask,
+    key = {Welcome | Flask (A Python Microframework)},
+    title = {Welcome | Flask (A Python Microframework)},
+    url = {http://flask.pocoo.org/},
+    urldate = {2018-04-14},
+}
+
+@online{pythonunittest,
+    key = {26.4. unittest — Unit testing framework – Python 3.6.5 documentation},
+    title = {26.4. unittest — Unit testing framework – Python 3.6.5 documentation},
+    url = {https://docs.python.org/3/library/unittest.html},
+    urldate = {2018-04-18},
+}
+
+@article{luo2001software,
+    title = {Software testing techniques},
+    author = {Luo, Lu},
+    journal = {Institute for software research international Carnegie mellon university Pittsburgh, PA},
+    volume = {15232},
+    number = {1-19},
+    pages = {19},
+    year = {2001}
+}
+
+@online{maven,
+    key = {Maven – Welcome to Apache Maven},
+    title = {Maven – Welcome to Apache Maven},
+    url = {https://maven.apache.org/},
+    urldate = {2018-04-18},
+}
+
+@online{mocha,
+    key = {Mocha – the fun, simple, flexible JavaScript test framework},
+    title = {Mocha – the fun, simple, flexible JavaScript test framework},
+    url = {https://mochajs.org/},
+    urldate = {2018-04-18},
+}
+
+@online{chai,
+    key = {Chai},
+    title = {Chai},
+    url = {http://www.chaijs.com/},
+    urldate = {2018-04-18},
+}
+
+@book{bittner2002use,
+    title = {Use case modeling},
+    author = {Bittner, Kurt},
+    year = {2002},
+    publisher = {Addison-Wesley Longman Publishing Co., Inc.},
+    address = {Boston, Massachusetts, USA},
+}
+
+@online{dockernodeimage,
+    key = {library/node - Docker Hub},
+    title = {library/node - Docker Hub},
+    url = {https://hub.docker.com/_/node/},
+    urldate = {2018-04-18},
+}
+
+@online{linux,
+    key = {Linux – The Linux Foundation},
+    title = {Linux – The Linux Foundation},
+    url = {https://www.linuxfoundation.org/projects/linux/},
+    urldate = {2018-04-18},
 }
