--- a/content/appendix-C-zkratky.tex
+++ b/content/appendix-C-zkratky.tex
@@ -1,20 +1,19 @@
-\usepackage[T1]{fontenc}
-\usepackage[utf8]{inputenc}
-
 %!TEX ROOT=../diploma-thesis.tex
 
-\chapter{Seznam použitých zkratek}
+\chapter{Seznam použitých zkratek}\label{ch:shortcuts}
 
 \begin{description}[align=left]
     \item [ADDA] Aspect-Driven Design Approach
     \item [API] Application Programming Interface
     \item [AST] Abstract Syntax Tree
     \item [CORBA] Common Object Request Broker Architecture
+    \item [CSS] Cascading Style Sheets
     \item [DOM] Document Object Model
     \item [DSL] Domain-Specific Language
     \item [EIS] Enterprise Information System
     \item [EL] Expression Language
     \item [ESB] Enterprise Service Bus
+    \item [HTML] Hypertext Markup Language
     \item [HTTP] Hypertext Transfer Protocol
     \item [IDL] Interface Description Language
     \item [IS] Informační systém
@@ -22,13 +21,15 @@
     \item [MDA] Model-Driver Architecture
     \item [MQ] Message Queue
     \item [ORB] Object Request Broker
-    \item [OOP] Objektově Oriented Programming (Objektově orientované programování)
+    \item [OOP] Object Oriented Programming (Objektově orientované programování)
     \item [REST] Representational State Transfer
     \item [RPC] Remote Procedure Call
     \item [SOA] Service Oriented Architecture
     \item [SOAP] Simple Object Access Protocol
+    \item [UC] Use Case
     \item [UI] User Interface
     \item [WSDL] Web Service Description Language
     \item [XML] Extensible Markup Language
     \item [XSD] XML Schema Definition
+    \item [YAML] YAML Ain't Markup Language
 \end{description}
